recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
return tree(steps-1,length,angle)
           ^